@@ -47,7 +47,10 @@ function affiliates_admin_hits() {
 		isset( $_POST['expanded_referrals'] ) ||
 		isset( $_POST['show_inoperative'] )
 	) {
-		if ( !wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_FILTER_NONCE], 'admin' ) ) {
+		if (
+			!isset( $_POST[AFFILIATES_ADMIN_HITS_FILTER_NONCE] ) ||
+			!wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_FILTER_NONCE], 'admin' )
+		) {
 			wp_die( __( 'Access denied.', 'affiliates' ) );
 		}
 	}
@@ -142,13 +145,19 @@ function affiliates_admin_hits() {
 	}
 
 	if ( isset( $_POST['row_count'] ) ) {
-		if ( !wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_NONCE_1], 'admin' ) ) {
+		if (
+			!isset( $_POST[AFFILIATES_ADMIN_HITS_NONCE_1] ) ||
+			!wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_NONCE_1], 'admin' )
+		) {
 			wp_die( __( 'Access denied.', 'affiliates' ) );
 		}
 	}
 
 	if ( isset( $_POST['paged'] ) ) {
-		if ( !wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_NONCE_2], 'admin' ) ) {
+		if (
+			!isset( $_POST[AFFILIATES_ADMIN_HITS_NONCE_2] ) ||
+			!wp_verify_nonce( $_POST[AFFILIATES_ADMIN_HITS_NONCE_2], 'admin' )
+		) {
 			wp_die( __( 'Access denied.', 'affiliates' ) );
 		}
 	}
