@@ -77,7 +77,10 @@ class Affiliates_Settings {
 
 		if ( current_user_can( AFFILIATES_ADMINISTER_OPTIONS ) ) {
 			if ( isset( $_REQUEST['aff_setup_hide'] ) ) {
-				if ( wp_verify_nonce( $_REQUEST['aff_setup_nonce'], 'aff_setup_hide' ) ) {
+				if (
+					isset( $_REQUEST['aff_setup_nonce'] ) &&
+					wp_verify_nonce( $_REQUEST['aff_setup_nonce'], 'aff_setup_hide' )
+				) {
 					add_option( 'aff_setup_hide', 'yes', '', 'no' );
 				}
 			}
